pequenas modificações no service e exceptions do livro, teste do livroService feito